# Ducat-Quest

./: .gitignore  README.md  TODO.txt  app.py  db.py  ducat_quest.db  logic.py  prompts.py  pyproject.toml  requirements.txt  tree.txt
pages/: 1_Task_List.py  2_Create_Task.py  3_Shop.py  4_Completed_Tasks.py  5_Budget.py
utils/: context_helpers.py  llm.py  prompts.py  util.py
