[project]
name = "ducat-quest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-genai>=1.24.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
    "streamlit-autorefresh>=1.0.1",
]
